--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
     "file-loader": "^6.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "style-loader": "^4.0.0",
     "web-vitals": "^2.1.4"
