--- a/front/package.json
+++ b/front/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.8",
     "css-loader": "^7.1.1",
     "file-loader": "^6.2.0",
     "react": "^18.2.0",
