--- a/front/package.json
+++ b/front/package.json
@@ -13,8 +13,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "css-loader": "^7.1.1",
+    "date-fns": "^3.6.0",
     "file-loader": "^6.2.0",
     "react": "^18.2.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
