--- a/front/package.json
+++ b/front/package.json
@@ -12,7 +12,6 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
-    "css-loader": "^7.1.1",
     "date-fns": "^3.6.0",
     "file-loader": "^6.2.0",
     "react": "^18.2.0",
@@ -22,7 +21,6 @@
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "react-textarea-autosize": "^8.5.3",
-    "style-loader": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -48,5 +46,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.24.6",
+    "@babel/preset-env": "^7.24.6",
+    "@babel/preset-react": "^7.24.6",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^7.1.2",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   }
 }
